# SAXIBrainSurfaceQCSlicerExtension

./: README.md
QualityControl/: CMakeLists.txt  temp.py
QualityControl/QC_Model/: CMakeLists.txt  QC_Model.py
QualityControl/QC_Model/Resources/UI/: QC_Model.ui
QualityControl/QC_Modelcli/: CMakeLists.txt  QC_Modelcli.py  QC_Modelcli.xml  QC_model_path.json  input.csv
QualityControl/QC_Modelcli/ShapeAXI/shapeaxi/: saxi_dataset.py  saxi_predict.py
